--- a/public/register.html
+++ b/public/register.html
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Register</a>
+                <a class="nav-link active" aria-current="page" href="/login">Login</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
@@ -26,5 +26,29 @@
           </div>
         </div>
       </nav>
+
+      <div class="container my-5" >
+      <div class="card" style="width: 100%;">
+        <div class="card-body">
+          <h5 class="card-title">Register form</h5>
+          <form onsubmit="return false;" id="form">
+            <div class="mb-3">
+              <label for="email" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" autocomplete="off" required>
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" class="form-control" id="password" autocomplete="off" required>
+            </div>
+            <div class="alert alert-danger" role="alert" id="error" style="display: none;"></div>
+            <div class="alert alert-success" role="alert" id="success" style="display: none;"></div>
+            <button type="submit" class="btn btn-primary">Register</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <script src="./js/register.js"></script>
 </body>
 </html>
